--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "bower_components"
   ],
   "dependencies": {
+	  "craft" : "http://craftcms.com/latest.zip?accept_license=yes",
     "loadcss": "^0.2.4",
     "lazysizes": "^1.4.0",
     "picturefill": "^3.0.2",
