Added JSON Reader plugin.

--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
 	"contactform": "https://github.com/pixelandtonic/ContactForm.git",
 	"redirectmanager": "https://github.com/rkingon/Craft-Plugin--Redirect-Manager.git",
 	"sproutfields": "http://sprout.barrelstrengthdesign.com/craft-plugins/fields/download",
-	"craft-jsontransforms": "https://github.com/mijewe/craft-jsontransforms.git"
+	"craft-jsontransforms": "https://github.com/mijewe/craft-jsontransforms.git",
+	"craft-jsonreader": "https://github.com/mijewe/craft-jsonreader.git"
   },
   "devDependencies": {
     "normalize-scss": "~3.0.3",
