--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ fastcgi_cache_path /var/www/example.com/cache levels=1:2 keys_zone=examplecache:
 server {
 	listen 80;
 	listen [::]:80; # handle ipv6.
-	
+
 	server_name www.example.com;
 	return 301 $scheme://example.com$request_uri;
 }
@@ -42,7 +42,7 @@ server {
 	}
 
 	# Cache non-admin assets
-	location ~* ^(!/admin/(.*))\.(js|css|png|jpg|jpeg|gif|ico|woff|ttf|svg)(.*)?$ {
+	location ~* ^((?!/admin))(.*)(\.(js|css|png|jpg|jpeg|gif|ico|woff|ttf|svg))(.*)$ {
 		expires 1M;
 	}
 
