Updated init job for CME.

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@ craft/config/license.key
 # Now ignore everything in public...
 public/*
 
-# ...except locales...
+# ...except indexes...
+!public/index.php
 #!public/en/
 
 # ...and assets...
