--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-    "name": "craft-boilerplate",
+    "name": "craft-core",
     "version": "0.1.0",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/dustcollective/craft-boilerplate.git"
-    },
+    "repository": "https://github.com/mijewe/craft-core",
     "devDependencies": {
         "grunt": "^1.0.1",
         "grunt-autoprefixer": "^3.0.4",
@@ -18,5 +15,14 @@
         "grunt-newer": "^1.1.2",
         "grunt-sass": "^1.1.0",
         "grunt-svgmin": "^3.2.0"
+    },
+    "main": "index.js",
+    "author": "Michael Westwood <hello@builtbymichael.com>",
+    "license": "MIT",
+    "dependencies": {
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^4.0.0",
+        "gulp-sass": "^3.1.0",
+        "require-dir": "^0.3.1"
     }
 }
