--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dependencies": {
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
+        "gulp-concat": "^2.6.1",
         "gulp-sass": "^3.1.0",
+        "gulp-uglify": "^2.1.2",
         "require-dir": "^0.3.1"
     }
 }
