Added Gulpy svgmin tasks.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "gulp-autoprefixer": "^4.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-sass": "^3.1.0",
+        "gulp-svgmin": "^1.2.3",
         "gulp-uglify": "^2.1.2",
         "require-dir": "^0.3.1"
     }
