--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
         "gulp-concat": "^2.6.1",
+        "gulp-favicons": "^2.2.7",
         "gulp-sass": "^3.1.0",
         "gulp-svgmin": "^1.2.3",
         "gulp-uglify": "^2.1.2",
