Moved craft app dest to the proper place.

--- a/package.json
+++ b/package.json
@@ -2,20 +2,7 @@
     "name": "craft-core",
     "version": "0.1.0",
     "repository": "https://github.com/mijewe/craft-core",
-    "devDependencies": {
-        "grunt": "^1.0.1",
-        "grunt-autoprefixer": "^3.0.4",
-        "grunt-contrib-clean": "^1.0.0",
-        "grunt-contrib-concat": "^1.0.1",
-        "grunt-contrib-copy": "^1.0.0",
-        "grunt-contrib-uglify": "^1.0.1",
-        "grunt-criticalcss": "^1.0.2",
-        "grunt-favicons": "^0.8.0",
-        "grunt-grunticon": "^2.2.2",
-        "grunt-newer": "^1.1.2",
-        "grunt-sass": "^1.1.0",
-        "grunt-svgmin": "^3.2.0"
-    },
+    "devDependencies": {},
     "main": "index.js",
     "author": "Michael Westwood <hello@builtbymichael.com>",
     "license": "MIT",
