--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "author": "Michael Westwood <hello@builtbymichael.com>",
     "license": "MIT",
     "dependencies": {
+        "grunt": "^1.0.1",
+        "grunt-criticalcss": "^2.1.0",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
         "gulp-concat": "^2.6.1",
