--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
 	"sproutfields": "http://sprout.barrelstrengthdesign.com/craft-plugins/fields/download",
 	"craft-jsontransforms": "https://github.com/mijewe/craft-jsontransforms.git",
 	"craft-jsonreader": "https://github.com/mijewe/craft-jsonreader.git",
-	"fieldmanager": "https://github.com/engram-design/FieldManager.git"
+	"fieldmanager": "https://github.com/engram-design/FieldManager.git",
+  "imager-craft": "https://github.com/aelvan/Imager-Craft.git"
   },
   "devDependencies": {
     "normalize-scss": "~3.0.3",
