--- a/package.json
+++ b/package.json
@@ -7,6 +7,19 @@
     "author": "Michael Westwood <hello@builtbymichael.com>",
     "license": "MIT",
     "dependencies": {
+        "ContactForm": "https://github.com/pixelandtonic/ContactForm.git#v1",
+        "Craft-Plugin--Redirect-Manager": "https://github.com/rkingon/Craft-Plugin--Redirect-Manager.git",
+        "FieldManager": "https://github.com/engram-design/FieldManager.git",
+        "Imager-Craft": "https://github.com/aelvan/Imager-Craft.git",
+        "craft-anchor": "https://github.com/mijewe/craft-anchor.git",
+        "craft-cachey": "https://github.com/dustcollective/craft-cachey.git",
+        "craft-emailwrap": "https://github.com/mijewe/craft-emailwrap.git",
+        "craft-jsonreader": "https://github.com/mijewe/craft-jsonreader.git",
+        "craft-jsontransforms": "https://github.com/mijewe/craft-jsontransforms.git",
+        "craft-refreshstring": "https://github.com/mijewe/craft-refreshstring.git",
+        "craft-typogrify": "https://github.com/jamiepittock/craft-typogrify.git",
+        "fg-loadcss": "^1.3.1",
+        "fontfaceobserver": "^2.0.13",
         "grunt": "^1.0.1",
         "grunt-criticalcss": "^2.1.0",
         "gulp": "^3.9.1",
@@ -18,6 +31,10 @@
         "gulp-sass": "^3.1.0",
         "gulp-svgmin": "^1.2.3",
         "gulp-uglify": "^2.1.2",
-        "require-dir": "^0.3.1"
+        "lazysizes": "^4.0.1",
+        "normalize-scss": "^7.0.0",
+        "picturefill": "^3.0.2",
+        "require-dir": "^0.3.1",
+        "susy": "^3.0.1"
     }
 }
