--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "craft-jsonreader": "https://github.com/mijewe/craft-jsonreader.git",
         "craft-jsontransforms": "https://github.com/mijewe/craft-jsontransforms.git",
         "craft-refreshstring": "https://github.com/mijewe/craft-refreshstring.git",
+        "fastcgicachebust": "https://github.com/nystudio107/fastcgicachebust.git",
         "fg-loadcss": "^1.3.1",
         "fontfaceobserver": "^2.0.13",
         "gulp": "^3.9.1",
