--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "license": "MIT",
     "dependencies": {
         "ContactForm": "https://github.com/pixelandtonic/ContactForm.git#v1",
-        "Imager-Craft": "https://github.com/aelvan/Imager-Craft.git",
+        "Imager-Craft": "https://github.com/aelvan/Imager-Craft.git#v1.6.4",
         "craft-anchor": "https://github.com/mijewe/craft-anchor.git",
         "craft-emailwrap": "https://github.com/mijewe/craft-emailwrap.git",
         "craft-jsonreader": "https://github.com/mijewe/craft-jsonreader.git",
         "craft-jsontransforms": "https://github.com/mijewe/craft-jsontransforms.git",
         "craft-refreshstring": "https://github.com/mijewe/craft-refreshstring.git",
         "fastcgicachebust": "https://github.com/nystudio107/fastcgicachebust.git",
-        "fg-loadcss": "^1.3.1",
+        "fg-loadcss": "^2.0.1",
         "fontfaceobserver": "^2.0.13",
         "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^4.0.0",
+        "gulp-autoprefixer": "^5.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-copy": "^1.0.0",
         "gulp-favicons": "^2.2.7",
