--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "license": "MIT",
     "dependencies": {
         "ContactForm": "https://github.com/pixelandtonic/ContactForm.git#v1",
+        "Craft-Plugin--Redirect-Manager": "https://github.com/rkingon/Craft-Plugin--Redirect-Manager.git",
         "Imager-Craft": "https://github.com/aelvan/Imager-Craft.git#v1.6.4",
         "craft-anchor": "https://github.com/mijewe/craft-anchor.git",
         "craft-emailwrap": "https://github.com/mijewe/craft-emailwrap.git",
