--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
         "lazysizes": "^4.0.1",
         "normalize-scss": "^7.0.0",
         "picturefill": "^3.0.2",
-        "require-dir": "^0.3.1",
-        "susy": "^2.2.12"
+        "require-dir": "^0.3.1"
     }
 }
