Big ol' update.

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,8 @@ DB_TABLE_PREFIX=""
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
 DB_PORT=""
 
+# The transformer Imager will use. Set to "imgix" for Imgix.
 CRAFTENV_TRANSFORMER="craft"
+
+# The domain of the Imgix source for this site.
+IMGIX_DOMAINS=""
