--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "rss": "https://craftcms.com/changelog.rss"
   },
   "require": {
-    "craftcms/cms": "^3.0.0",
+    "craftcms/cms": "3.0.4",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/contact-form": "2.1.1",
     "nystudio107/craft-fastcgicachebust": "1.0.6",
